--- a/LangChain_PDF_Query_LLM.ipynb
+++ b/LangChain_PDF_Query_LLM.ipynb
@@ -155,7 +155,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+        "os.environ[\"OPENAI_API_KEY\"] = \"\""
       ],
       "metadata": {
         "id": "yKaKB_GjWKjL"
